sign up, list users, user profile, delete user, login user after signup, font-awesome, many other improvements..

--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -10,9 +10,18 @@
 // Customizing bootstrap
 @import "bootstrap-customized.scss";
 
+// Font Awesome styles
+@import "~font-awesome/css/font-awesome.min.css";
+
 /**
  * General CSS
  */
  * {
     outline: 0 !important;
+}
+
+#screen-wrapper {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
 }
