use className for styling, use ID only for selecting the element

--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -20,7 +20,7 @@
     outline: 0 !important;
 }
 
-#screen-wrapper {
+.screen-wrapper {
     display: flex;
     min-height: 100vh;
     flex-direction: column;
