--- a/frontend/src/app/styles/main.less
+++ b/frontend/src/app/styles/main.less
@@ -1,4 +1,4 @@
-@import 'antd/dist/antd.less';
+@import 'antd/dist/antd.less'; // TODO - before going into production, dont forget to cherrypick only necessary Ant components
 
 /**
 * Overriding Theme Variables
