[FE] update deps

--- a/frontend/src/app/styles/main.less
+++ b/frontend/src/app/styles/main.less
@@ -1,4 +1,5 @@
 @import 'antd/dist/antd.less'; // TODO - before going into production, dont forget to cherrypick only necessary Ant components
+@import 'antd/lib/style/v2-compatible-reset.less';
 
 /**
 * Overriding Theme Variables
