--- a/src/common/components/Header/Nav/style.less
+++ b/src/common/components/Header/Nav/style.less
@@ -11,6 +11,7 @@
     .ant-popover-inner {
       height: 100vh;
       border-radius: 0;
+      background: #fff;
 
       .ant-popover-inner-content {
         display: flex;
