split to /packages, upgrade deps, port some code from recent projects

--- a/src/app/styles/main.less
+++ b/src/app/styles/main.less
@@ -57,5 +57,5 @@
 // Overriding Theme Variables
 @import './ant-variables.less';
 
-// Import component styles
+// Import component components styles
 @import '../../common/components/style.less';
