remove modal and redux-modal since its not used anywhere

--- a/src/app/styles/main.less
+++ b/src/app/styles/main.less
@@ -28,7 +28,7 @@
 // @import 'antd/lib/mention/style/index.less';
 @import 'antd/lib/menu/style/index.less';
 @import 'antd/lib/message/style/index.less';
-@import 'antd/lib/modal/style/index.less';
+// @import 'antd/lib/modal/style/index.less';
 // @import 'antd/lib/notification/style/index.less';
 // @import 'antd/lib/pagination/style/index.less';
 // @import 'antd/lib/popover/style/index.less';
