--- a/src/common/components/Header/style.less
+++ b/src/common/components/Header/style.less
@@ -8,7 +8,7 @@
   }
 
   .anticon-bars {
-    color: #fff;
+    color: @white;
     font-size: @layout-header-height / 2;
     line-height: @layout-header-height;
   }
