--- a/src/common/components/Navbar/ResponsiveMenu/style.less
+++ b/src/common/components/Navbar/ResponsiveMenu/style.less
@@ -11,7 +11,7 @@
     .ant-popover-inner {
       height: 100vh;
       border-radius: 0;
-      background: #fff;
+      background: @white;
 
       .ant-popover-inner-content {
         display: flex;
