--- a/src/app/styles/main.less
+++ b/src/app/styles/main.less
@@ -18,6 +18,7 @@
 // @import 'antd/lib/divider/style/index.less';
 // @import 'antd/lib/drawer/style/index.less';
 // @import 'antd/lib/dropdown/style/index.less';
+// @import 'antd/lib/empty/style/index.less';
 @import 'antd/lib/form/style/index.less';
 @import 'antd/lib/grid/style/index.less';
 @import 'antd/lib/input/style/index.less';
@@ -36,6 +37,7 @@
 // @import 'antd/lib/radio/style/index.less';
 // @import 'antd/lib/rate/style/index.less';
 // @import 'antd/lib/select/style/index.less';
+// @import 'antd/lib/skeleton/style/index.less';
 // @import 'antd/lib/slider/style/index.less';
 @import 'antd/lib/spin/style/index.less';
 // @import 'antd/lib/steps/style/index.less';
