Fix responsive menu (#66)
* Fix responsive menu

fix https://github.com/Kamahl19/react-starter/issues/6

* fixes

--- a/src/app/styles/main.less
+++ b/src/app/styles/main.less
@@ -32,7 +32,7 @@
 // @import 'antd/lib/modal/style/index.less';
 // @import 'antd/lib/notification/style/index.less';
 // @import 'antd/lib/pagination/style/index.less';
-// @import 'antd/lib/popover/style/index.less';
+@import 'antd/lib/popover/style/index.less';
 // @import 'antd/lib/progress/style/index.less';
 // @import 'antd/lib/radio/style/index.less';
 // @import 'antd/lib/rate/style/index.less';
