--- a/src/app/styles/main.less
+++ b/src/app/styles/main.less
@@ -25,7 +25,7 @@
 // @import 'antd/lib/input-number/style/index.less';
 @import 'antd/lib/layout/style/index.less';
 // @import 'antd/lib/list/style/index.less';
-@import 'antd/lib/locale-provider/style/index.less';
+// @import 'antd/lib/locale-provider/style/index.less';
 // @import 'antd/lib/mention/style/index.less';
 @import 'antd/lib/menu/style/index.less';
 @import 'antd/lib/message/style/index.less';
