update ant imports & refactor storybook

--- a/src/app/styles/main.less
+++ b/src/app/styles/main.less
@@ -14,32 +14,40 @@
 // @import 'antd/lib/cascader/style/index.less';
 // @import 'antd/lib/checkbox/style/index.less';
 // @import 'antd/lib/collapse/style/index.less';
+// @import 'antd/lib/comment/style/index.less';
+@import 'antd/lib/config-provider/style/index.less';
 // @import 'antd/lib/date-picker/style/index.less';
+// @import 'antd/lib/descriptions/style/index.less';
 // @import 'antd/lib/divider/style/index.less';
 // @import 'antd/lib/drawer/style/index.less';
 // @import 'antd/lib/dropdown/style/index.less';
 // @import 'antd/lib/empty/style/index.less';
 @import 'antd/lib/form/style/index.less';
 @import 'antd/lib/grid/style/index.less';
+@import 'antd/lib/icon/style/index.less';
 @import 'antd/lib/input/style/index.less';
 // @import 'antd/lib/input-number/style/index.less';
 @import 'antd/lib/layout/style/index.less';
 // @import 'antd/lib/list/style/index.less';
 // @import 'antd/lib/locale-provider/style/index.less';
 // @import 'antd/lib/mention/style/index.less';
+// @import 'antd/lib/mentions/style/index.less';
 @import 'antd/lib/menu/style/index.less';
 @import 'antd/lib/message/style/index.less';
 // @import 'antd/lib/modal/style/index.less';
 // @import 'antd/lib/notification/style/index.less';
+// @import 'antd/lib/page-header/style/index.less';
 // @import 'antd/lib/pagination/style/index.less';
 @import 'antd/lib/popover/style/index.less';
 // @import 'antd/lib/progress/style/index.less';
 // @import 'antd/lib/radio/style/index.less';
 // @import 'antd/lib/rate/style/index.less';
+@import 'antd/lib/result/style/index.less';
 // @import 'antd/lib/select/style/index.less';
 // @import 'antd/lib/skeleton/style/index.less';
 // @import 'antd/lib/slider/style/index.less';
 @import 'antd/lib/spin/style/index.less';
+// @import 'antd/lib/statistic/style/index.less';
 // @import 'antd/lib/steps/style/index.less';
 // @import 'antd/lib/switch/style/index.less';
 // @import 'antd/lib/table/style/index.less';
@@ -51,10 +59,11 @@
 // @import 'antd/lib/transfer/style/index.less';
 // @import 'antd/lib/tree/style/index.less';
 // @import 'antd/lib/tree-select/style/index.less';
+// @import 'antd/lib/typography/style/index.less';
 // @import 'antd/lib/upload/style/index.less';
 
-// Overriding Theme Variables
-@import './ant-variables.less';
+// Overriding AntD theme variables
+@import './theme-variables.less';
 
 // Import component components styles
 @import '../../common/components/style.less';
