admin-layout package

--- a/src/app/styles/main.less
+++ b/src/app/styles/main.less
@@ -29,7 +29,6 @@
 // @import 'antd/lib/input-number/style/index.less';
 @import 'antd/lib/layout/style/index.less';
 // @import 'antd/lib/list/style/index.less';
-// @import 'antd/lib/locale-provider/style/index.less';
 // @import 'antd/lib/mention/style/index.less';
 // @import 'antd/lib/mentions/style/index.less';
 @import 'antd/lib/menu/style/index.less';
@@ -64,6 +63,9 @@
 
 // Overriding AntD theme variables
 @import './theme-variables.less';
+
+// Import packages styles
+@import '../../packages/admin-layout/style.less';
 
 // Import component components styles
 @import '../../common/components/style.less';
