fix responsive menu styles

--- a/src/app/styles/main.less
+++ b/src/app/styles/main.less
@@ -64,8 +64,8 @@
 // Overriding AntD theme variables
 @import './theme-variables.less';
 
-// Import packages styles
+// Import Package styles
 @import '../../packages/admin-layout/style.less';
 
-// Import component components styles
+// Import Common components styles
 @import '../../common/components/style.less';
