update Auth layout design

--- a/src/app/styles/main.less
+++ b/src/app/styles/main.less
@@ -69,3 +69,6 @@
 
 // Import Common components styles
 @import '../../common/components/style.less';
+
+// Import Feature styles
+@import '../../features/auth/components/AuthLayout/style.less';
