--- a/src/common/components/Navbar/style.less
+++ b/src/common/components/Navbar/style.less
@@ -1,7 +1,9 @@
 .navbar {
   &-menu {
+    border-bottom-color: transparent;
+
     .ant-menu-item {
-      line-height: 64px;
+      line-height: 62px;
     }
   }
 
@@ -36,7 +38,7 @@
   &-trigger {
     float: right;
     font-size: 24px;
-    color: @white;
+    color: @black;
     cursor: pointer;
   }
 }
