add widget component

--- a/src/app/styles/main.less
+++ b/src/app/styles/main.less
@@ -9,7 +9,7 @@
 // @import 'antd/lib/breadcrumb/style/index.less';
 @import 'antd/lib/button/style/index.less';
 // @import 'antd/lib/calendar/style/index.less';
-// @import 'antd/lib/card/style/index.less';
+@import 'antd/lib/card/style/index.less';
 // @import 'antd/lib/carousel/style/index.less';
 // @import 'antd/lib/cascader/style/index.less';
 // @import 'antd/lib/checkbox/style/index.less';
@@ -29,6 +29,7 @@
 // @import 'antd/lib/input-number/style/index.less';
 @import 'antd/lib/layout/style/index.less';
 // @import 'antd/lib/list/style/index.less';
+@import 'antd/lib/locale-provider/style/index.less';
 // @import 'antd/lib/mention/style/index.less';
 // @import 'antd/lib/mentions/style/index.less';
 @import 'antd/lib/menu/style/index.less';
