Update Antd to v4-rc5

--- a/src/app/styles/main.less
+++ b/src/app/styles/main.less
@@ -1,3 +1,5 @@
+// TODO https://next.ant.design/docs/react/use-in-typescript#Advanced-Guides
+// TODO https://github.com/ant-design/create-react-app-antd
 @import 'antd/dist/antd.less';
 
 // Overriding AntD theme variables
