--- a/src/common/components/Navbar/style.less
+++ b/src/common/components/Navbar/style.less
@@ -20,9 +20,12 @@
       }
 
       &-title {
+        height: @layout-header-height;
+        padding: @layout-header-padding;
+        line-height: @layout-header-height;
         border-bottom: 0;
         text-align: right;
-        font-size: 22px;
+        font-size: 24px;
       }
 
       &-arrow {
