Update AdminLayout story

--- a/src/packages/admin-layout/style.less
+++ b/src/packages/admin-layout/style.less
@@ -9,7 +9,7 @@
   }
 
   &-sidebar {
-    box-shadow: 1px 0 4px 0 @shadow-color;
+    box-shadow: 2px 0 8px 0 rgba(29, 35, 41, 0.05);
 
     .ant-layout-sider-children {
       display: flex;
@@ -52,8 +52,8 @@
     &-header {
       display: flex;
       padding: 0;
-      background: @white;
-      box-shadow: 0 1px 4px @shadow-color;
+      background: #ffffff;
+      box-shadow: 0 1px 4px rgba(0, 21, 41, 0.08);
     }
 
     &-content {
