Update ErrorBoundary style

--- a/src/common/components/style.less
+++ b/src/common/components/style.less
@@ -1,3 +1,4 @@
 @import './AdminLayout/style.less';
+@import './ErrorBoundary/style.less';
 @import './LoadingScreen/style.less';
 @import './Navbar/style.less';
