Refactor Sidebar + responsive fixes

--- a/src/features/auth/components/AuthLayout/style.less
+++ b/src/features/auth/components/AuthLayout/style.less
@@ -4,6 +4,10 @@
   .ant-layout {
     &-header {
       background: @menu-bg;
+
+      @media (max-width: @screen-xs-max) {
+        padding-left: 0;
+      }
     }
 
     &-content {
