--- a/src/common/components/Navbar/style.less
+++ b/src/common/components/Navbar/style.less
@@ -39,9 +39,14 @@
   }
 
   &-trigger {
-    float: right;
+    display: inline-block;
+    width: @layout-header-height;
+    text-align: center;
     font-size: 20px;
-    color: @black;
     cursor: pointer;
+
+    &:hover {
+      color: @primary-color;
+    }
   }
 }
