Update layout and spinner

--- a/src/common/components/AdminLayout/style.less
+++ b/src/common/components/AdminLayout/style.less
@@ -30,6 +30,7 @@
   &-main {
     &-header {
       display: flex;
+      z-index: 19;
       padding: 0;
       background: #ffffff;
       box-shadow: 0 1px 4px rgba(0, 21, 41, 0.08);
