--- a/src/features/auth/components/AuthLayout/style.less
+++ b/src/features/auth/components/AuthLayout/style.less
@@ -3,6 +3,8 @@
 
   .ant-layout {
     &-header {
+      display: flex;
+      justify-content: space-between;
       background: @menu-bg;
 
       @media (max-width: @screen-xs-max) {
