--- a/src/common/components/LoadingScreen/style.less
+++ b/src/common/components/LoadingScreen/style.less
@@ -1,6 +1,13 @@
 .loading-screen {
-  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
+
+  &.full-height {
+    height: 100%;
+  }
+
+  &.full-vp-height {
+    height: 100vh;
+  }
 }
