Update deps and fix some minor layout issues

--- a/src/common/components/AdminLayout/style.less
+++ b/src/common/components/AdminLayout/style.less
@@ -38,6 +38,10 @@
 
     &-content {
       padding: @padding-lg;
+
+      @media (max-width: @screen-xs-max) {
+        padding: @padding-sm;
+      }
     }
   }
 
