--- a/src/common/components/Navbar/style.less
+++ b/src/common/components/Navbar/style.less
@@ -21,7 +21,7 @@
 
       &-title {
         height: @layout-header-height;
-        padding: @layout-header-padding;
+        padding: 0 @padding-lg 0 0;
         line-height: @layout-header-height;
         border-bottom: 0;
         text-align: right;
