Extract Ant Design config into separate provider to enable testing

--- a/src/app/styles/main.less
+++ b/src/app/styles/main.less
@@ -1,6 +1,6 @@
 @import 'antd/dist/antd.less';
 
-// Overriding AntD theme variables
+// Overriding Ant Design theme variables
 @import './theme-variables.less';
 
 // Fix vertical scrollbar added by oaf-react-router
