Split translations into namespaces, Create custom PageHeader, Add breadcrumbs

--- a/src/app/styles/theme-variables.less
+++ b/src/app/styles/theme-variables.less
@@ -1,1 +1,1 @@
-// Link to default variables - https://github.com/ant-design/ant-design/blob/master/components/style/themes/default.less
+// Link to default variables - https://github.com/ant-design/ant-design/blob/4.x-stable/components/style/themes/variable.less
