--- a/src/common/components/style.less
+++ b/src/common/components/style.less
@@ -1,4 +1,5 @@
 @import './AdminLayout/style.less';
 @import './Logo/style.less';
 @import './Navbar/style.less';
+@import './PageHeader/style.less';
 @import './Widget/style.less';
