--- a/src/features/dashboard/components/DashboardLayout/style.less
+++ b/src/features/dashboard/components/DashboardLayout/style.less
@@ -30,7 +30,7 @@
     }
   }
 
-  .ant-page-header {
+  .page-header {
     margin: -@padding-lg -@padding-lg @padding-lg;
 
     @media (max-width: @screen-xs-max) {
